--- a/1_LogicaDeProgramacao/3_Javascript_Python/1_MultiplasVars/index.html
+++ b/1_LogicaDeProgramacao/3_Javascript_Python/1_MultiplasVars/index.html
@@ -15,6 +15,12 @@
 
     <p id="r"></p>
 
+    <p>let a = b = c = 0;</p>
+
+    <p>Saída:</p>
+
+    <p id="r2"></p>
+
     <script src="myScript.js"></script>
   </body>
 </html>
