--- a/2_JS+HTML+CSS/2_Responsive_Layout/index.html
+++ b/2_JS+HTML+CSS/2_Responsive_Layout/index.html
@@ -10,15 +10,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2>CSS Layout Float</h2>
-    <p>
-      In this example, we have created a header, two columns/boxes and a footer.
-      On smaller screens, the columns will stack on top of each other.
-    </p>
-    <p>
-      Resize the browser window to see the responsive effect (you will learn
-      more about this in our next chapter - HTML Responsive.)
-    </p>
+    <h2 style="text-align: center">CSS Layout Float</h2>
 
     <header>
       <h2>Cities</h2>
