--- a/2_JS+HTML+CSS/2_Responsive_Layout/index.html
+++ b/2_JS+HTML+CSS/2_Responsive_Layout/index.html
@@ -1,19 +1,17 @@
-<!-- HTML -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2 style="text-align: center">CSS Layout Float</h2>
+    <h2 style="text-align: center">CSS Layout Flexbox</h2>
 
     <header>
-      <h2>Cities</h2>
+      <h4>Cities</h4>
     </header>
 
     <section>
@@ -43,8 +41,5 @@
     <footer>
       <p>Footer</p>
     </footer>
-
-    <!-- JS -->
-    <script src="script.js"></script>
   </body>
 </html>
