--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Forms/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Forms/index.html
@@ -7,15 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Teste input</h2>
 
     <p>Digite algo no input abaixo:</p>
 
     <input id="input1" />
 
-    <button type="button" onclick="myFunction()">OK</button>
+    <button type="button" onclick="ok()">OK</button>
 
-    <p id="p1"></p>
     <p id="p2"></p>
 
     <script src="myScript.js"></script>
