--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/3_Forms_nome/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/3_Forms_nome/index.html
@@ -12,15 +12,14 @@
     <p>Digite o seu nome:</p>
 
     <input id="input1" />
-
+    
     <p>Digite o seu sobrenome:</p>
 
     <input id="input2" />
+    <br>
+    <br>
 
-    <br />
-    <br />
-
-    <button type="button" onclick="myFunction()">OK</button>
+    <button type="button" onclick="ok()">OK</button>
 
     <p id="p1"></p>
 
