--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/4_Média2Notas/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/4_Média2Notas/index.html
@@ -20,7 +20,7 @@
     <br />
     <br />
 
-    <button type="button" onclick="myFunction()">OK</button>
+    <button type="button" onclick="calcular_media()">Calcular</button>
 
     <p id="r"></p>
 
