--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Button_show+hide/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Button_show+hide/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Teste</p>
 
-    <p id="demo1"><br /></p>
-    <p id="demo2"></p>
+    <p id="demo1"><br></p>
 
     <button onclick="exibirNome()">Exibir</button>
     <button onclick="ocultarNome()">Ocultar</button>
