--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Emoji_buttons/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Emoji_buttons/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="p1"><br></p>
+    <p id="p1">😐</p>
+    <p>Como você está?</p>
     <button onclick="feliz()">feliz</button>
     <button onclick="triste()">triste</button>
+    <button onclick="nao_sei()">sei lá</button>
 
     <script src="s.js"></script>
     
