--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/4_Média2Notas_Cond/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/4_Média2Notas_Cond/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Formulário Média de 2 Provas</h2>
+    <h2>Formulário Média de 2 Provas - Condicional</h2>
 
     <p>Digite a nota1:</p>
 
