--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
@@ -21,7 +21,8 @@
     </p>
     
     <p>senha:
-    <input id="input2" />
+    <input type="password" id="input2" />
+    <button type="button" onclick="show()">👓</button>
     </p>
     <br>
 
