--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
@@ -22,15 +22,15 @@
         text-align: center;
         /* ... */
         background-color: aliceblue;
-        width: 400px;
+        width: 30%;
         border: 5px solid deepskyblue;
         border-radius: 12px;
         padding: 5%;
         /* ... */        
         margin-top: 7%;
         margin-bottom: 5%;
-        margin-right: 20%;
-        margin-left: 20%;
+        margin-right: 30%;
+        margin-left: 30%;
       }
     </style>
   </head>
