--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/5_FormVendedor/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/5_FormVendedor/index.html
@@ -13,7 +13,7 @@
 
     <input id="input1" />
 
-    <p>Digite o salário fixo:</p>
+    <p>Digite o salário base:</p>
 
     <input id="input2" />
 
