--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
@@ -21,16 +21,15 @@
       div {
         text-align: center;
         /* ... */
-        background-color: aliceblue;
-        width: 30%;
-        border: 5px solid deepskyblue;
+        width: 80%;
+        border: 5px;
         border-radius: 12px;
         padding: 5%;
         /* ... */        
         margin-top: 7%;
         margin-bottom: 5%;
-        margin-right: 30%;
-        margin-left: 30%;
+        margin-right: 4%;
+        margin-left: 4%;
       }
     </style>
   </head>
@@ -45,11 +44,11 @@
     
     <p id="p_senha">senha:
     <input type="password" id="input2" />
-    <button type="button" onclick="show()">👓</button>
+    <button id="show" type="button" onclick="show()">👁️</button>
     </p>
-    <br>
 
     <button id="b_entrar" type="button" onclick="entrar()">entrar</button>
+    <p id="erro" style="color: red;"></p>
 
     </div>
 
