--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
@@ -5,33 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <style>
-      h2{
-        text-align: center;
-      }
-      #p_login{
-        text-align: center;
-      }
-      #b_entrar{
-        text-align: center;
-      }
-      #p_senha{
-        margin-left: 32px;
-      }
-      div {
-        text-align: center;
-        /* ... */
-        width: 80%;
-        border: 5px;
-        border-radius: 12px;
-        padding: 5%;
-        /* ... */        
-        margin-top: 7%;
-        margin-bottom: 5%;
-        margin-right: 4%;
-        margin-left: 4%;
-      }
-    </style>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <div id="home">
@@ -48,7 +23,7 @@
     </p>
 
     <button id="b_entrar" type="button" onclick="entrar()">entrar</button>
-    <p id="erro" style="color: red;"></p>
+    <p id="erro"></p>
 
     </div>
 
