--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte2/2_1_Login/index.html
@@ -11,17 +11,18 @@
   <body>
     <div id="home">
     
-    <h2>Login</h2>
+    <h2>Sistema Escolar</h2>
 
-    <p id="p_login">login:
-    <input id="input1" />
+    <p id="p_login">
+    <input id="input1" placeholder="login"/>
     </p>
     
-    <p id="p_senha">senha:
-    <input type="password" id="input2" />
-    <button id="show" type="button" onclick="show()">👁️</button>
+    <p id="p_senha">
+    <input type="password" id="input2" placeholder="senha"/>
     </p>
-
+    <button id="show" type="button" onclick="show()">mostrar senha</button>
+    <br>
+    <br>
     <button id="b_entrar" type="button" onclick="entrar()">entrar</button>
     <p id="erro"></p>
 
