--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte3/5_Array/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte3/5_Array/index.html
@@ -16,6 +16,9 @@
     <p id="r1"></p>
     <p id="rl"></p>
 
+    <p>Percorrendo o array usando for:</p>
+    <p id="rFor"></p>
+
     <script src="myScript.js"></script>
   </body>
 </html>
