--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte4/1_Array_Sort/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte4/1_Array_Sort/index.html
@@ -16,6 +16,15 @@
 
     <p id="r"></p>
 
+    <h2>Exemplo Array Sort - Teste Letras</h2>
+
+    <p>const letras = ["C", "A", "D", "E", "H", "G", "B", "F"];</p>
+
+    <button onclick="cresLetras()">Crescente</button>
+    <button onclick="decresLetras()">Decrescente</button>
+
+    <p id="rLetras"></p>
+
     <script src="myScript.js"></script>
   </body>
 </html>
