--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Emoji_buttons/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/2_Emoji_buttons/index.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="p1">😐</p>
+    <p id="p1"><br></p>
+    <!-- código emojis -->
+    
     <p>Como você está?</p>
-    <button onclick="feliz()">feliz</button>
-    <button onclick="triste()">triste</button>
-    <button onclick="nao_sei()">sei lá</button>
+    <button onclick="feliz()">feliz &#128516;</button>
+    <button onclick="nao_sei()">sei lá &#128528;</button>
+    <button onclick="triste()">triste &#128532;</button>
 
-    <script src="s.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
