--- a/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/8_Média2Notas_Cond/index.html
+++ b/1_LogicaDeProgramacao/0_Javascript/1_Javascript_LP_Parte1/8_Média2Notas_Cond/index.html
@@ -11,11 +11,11 @@
 
     <p>Digite a nota1:</p>
 
-    <input id="input1" type="number" />
+    <input id="input1" type="number" min="0" max="10"/>
 
     <p>Digite a nota2:</p>
 
-    <input id="input2" type="number" />
+    <input id="input2" type="number" min="0" max="10"/>
 
     <br />
     <br />
