--- a/0_Javascript/1_Javascript_LP_Parte2/3_Search/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/3_Search/index.html
@@ -23,6 +23,7 @@
 
     <h3 id="google"><br></h3>
     <h3 id="bing"><br></h3>
+    <h3 id="duckduckgo"><br></h3>
     
     </div>
     <script src="script.js"></script>
