--- a/0_Javascript/1_Javascript_LP_Parte1/z_exercicios_hora_dia_tarde_noite_test_validacao/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte1/z_exercicios_hora_dia_tarde_noite_test_validacao/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <h2>Horário: Dia, Tarde e Noite - Cond</h2>
+    <h2>Horário: Manhã, Tarde e Noite - Cond</h2>
 
     <p>Informe a hora: <input id="i_hora" type="number" min="0" max="23" value="7"> </p>
 
