--- a/0_Javascript/1_Javascript_LP_Parte1/9_FormVendedor/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte1/9_FormVendedor/index.html
@@ -21,6 +21,9 @@
 
     <input id="input3" />
 
+    <p>Digite a porcentagem: </p>
+    <input id="input4" type="number" max="100" min="1">
+
     <br />
     <br />
 
