--- a/0_Javascript/1_Javascript_LP_Parte2/1_Maiorde2/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/1_Maiorde2/index.html
@@ -11,11 +11,11 @@
 
     <p>Digite o 1º número</p>
 
-    <input id="input1" type="number"/>
+    <input id="input1" type="number" onkeydown="return event.keyCode !== 69"/>
 
     <p>Digite o 2º número</p>
 
-    <input id="input2" type="number"/>
+    <input id="input2" type="number" onkeydown="return event.keyCode !== 69"/>
 
     <br />
     <br />
