--- a/0_Javascript/1_Javascript_LP_Parte2/06_CPF_RG/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/06_CPF_RG/index.html
@@ -13,11 +13,11 @@
 
     <p>Informe o seu CPF<span style="color: red"> *</span>:</p>
 
-    <input id="inputCPF" onkeypress="mascara(this,cpf)" maxlength="14" />
+    <input id="inputCPF" onkeypress="mascara(this,cpf)" maxlength="14" placeholder="123.456.789-10" />
 
     <p>Informe o seu RG<span style="color: red"> *</span>:</p>
 
-    <input id="inputRG" onkeypress="mascara(this,rg)" maxlength="13" />
+    <input id="inputRG" onkeypress="mascara(this,rg)" maxlength="13" placeholder="1234567891012" />
 
     <br />
     <br />
