--- a/0_Javascript/1_Javascript_LP_Parte2/09_Math_Random/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/09_Math_Random/index.html
@@ -11,8 +11,8 @@
 
     <p>Gerar números aleatórios:</p>
 
-    Min: <input id="inputMin" type="number" /> Max:
-    <input id="inputMax" type="number" />
+    Min: <input id="inputMin" type="number" min="0" /> Max:
+    <input id="inputMax" type="number" max="100" />
 
     <br />
     <br />
