--- a/0_Javascript/1_Javascript_LP_Parte2/04_Idade_IF_Jovem/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/04_Idade_IF_Jovem/index.html
@@ -11,7 +11,7 @@
 
     <p>Digite a sua data de nascimento:</p>
 
-    <input type="date" id="input1" name="date" min="1900-01-01" />
+    <input type="date" id="input1" min="1900-01-01" />
 
     <br />
     <br />
