--- a/0_Javascript/1_Javascript_LP_Parte2/06_CPF_RG/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/06_CPF_RG/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Cadastro de Documentos de Usuários.</h2>
+    <h2>Verificador de Documentos de Usuários.</h2>
 
     <p style="color: red">* Preencha pelo menos um dos campos abaixo.</p>
 
