--- a/0_Javascript/1_Javascript_LP_Parte2/07_Impar_Par/index.html
+++ b/0_Javascript/1_Javascript_LP_Parte2/07_Impar_Par/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script defer src="myScript.js"></script>
   </head>
   <body>
     <h2>Verifica se um número é ímpar ou par.</h2>
@@ -20,6 +21,6 @@
 
     <p id="r"></p>
 
-    <script src="myScript.js"></script>
+    
   </body>
 </html>
