--- a/0_Javascript/_Projetos_/free_login_templates/login-form-main/home.html
+++ b/0_Javascript/_Projetos_/free_login_templates/login-form-main/home.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 style="text-align: center;">Bem-vindo</h2>
+    <h2 style="text-align: center;">Olá, Bem-vindo</h2>
 </body>
 </html>
