--- a/0_Javascript/_Projetos_/free_login_templates/login-form-main/index.html
+++ b/0_Javascript/_Projetos_/free_login_templates/login-form-main/index.html
@@ -32,10 +32,10 @@
 		      			<input id="login" type="text" class="form-control rounded-left" placeholder="Usuário" required value="admin">
 		      		</div>
 	            <div class="form-group d-flex">
-	              <input id="senha" type="password" class="form-control rounded-left" placeholder="Senha" required value="123">
+	              <input id="senha" type="password" class="form-control rounded-left" placeholder="Senha" required value="123123">
 	            </div>
 	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3" onclick="entrar()">Entrar</button>
+	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3" onclick="return entrar(this)">Entrar</button>
 	            </div>
 	            <div class="form-group d-md-flex">
 	            	<div class="w-50">
@@ -59,9 +59,9 @@
 	</section>
 
 	<script src="js/jquery.min.js"></script>
-  <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  	<script src="js/popper.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/main.js"></script>
 
 	</body>
 </html>
