--- a/0_Javascript/_Projetos_/free_login_templates/login-form-main/home.html
+++ b/0_Javascript/_Projetos_/free_login_templates/login-form-main/home.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2 style="text-align: center;">Olá, Bem-vindo</h2>
+    <h1 class="alert alert-success text-center">Olá, Bem-vindo</h1>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
