--- a/0_Javascript/_Projetos_/free_login_templates/login-form-main/index.html
+++ b/0_Javascript/_Projetos_/free_login_templates/login-form-main/index.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-  	<title>Login - Main</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<head>
+	<title>Login - Main</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="css/style.css">
 
-	</head>
-	<body>
+</head>
+
+<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -23,25 +26,28 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="login-wrap p-4 p-md-4">
-		      	<div class="icon d-flex align-items-center justify-content-center">
-		      		<span class="fa fa-user-o"></span>
-		      	</div>
-		      	<h3 class="text-center mb-4">Área de Acesso</h3>
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="fa fa-user-o"></span>
+						</div>
+						<h3 class="text-center mb-4">Área de Acesso</h3>
 						<form action="#" class="login-form">
-		      		<div class="form-group">
-		      			<input id="login" type="text" class="form-control rounded-left" placeholder="Usuário" required value="admin">
-		      		</div>
-	            <div class="form-group d-flex">
-	              <input id="senha" type="password" class="form-control rounded-left" placeholder="Senha" required value="123123">
-	            </div>
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3" onclick="return entrar(this)">Entrar</button>
-	            </div>
-	            <div class="form-group d-md-flex">
-	            	<div class="w-50">
-	            		<label class="checkbox-wrap checkbox-primary">Ocultar a Senha
-									  <input id="show" type="checkbox" onclick="mostrar()" checked>
-									  <span class="checkmark"></span>
+							<div class="form-group">
+								<input id="login" type="text" class="form-control rounded-left" placeholder="Usuário"
+									required value="admin">
+							</div>
+							<div class="form-group d-flex">
+								<input id="senha" type="password" class="form-control rounded-left" placeholder="Senha"
+									required value="123123">
+							</div>
+							<div class="form-group">
+								<button type="submit" class="form-control btn btn-primary rounded submit px-3"
+									onclick="return entrar(this)">Entrar</button>
+							</div>
+							<div class="form-group d-md-flex">
+								<div class="w-50">
+									<label class="checkbox-wrap checkbox-primary">Ocultar a Senha
+										<input id="show" type="checkbox" onclick="mostrar()" checked>
+										<span class="checkmark"></span>
 									</label>
 									<!-- <input id="show" class="text-md-left" type="checkbox" onclick="mostrar()">mostrar a senha</button> -->
 
@@ -49,20 +55,20 @@
 								<div class="w-50 text-md-right">
 									<a href="#">Esqueci minha senha</a>
 								</div>
-	            </div>
-	          </form>
-			  <p id="aviso" class="text-center mb-4"></p>
-	        </div>
+							</div>
+						</form>
+						<p id="aviso" class="text-center mb-4"></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<script src="js/jquery.min.js"></script>
-  	<script src="js/popper.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
-  	<script src="js/main.js"></script>
+	<!-- <script src="js/popper.js"></script> -->
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
-
