--- a/0_Javascript/_Projetos_/1_free_login_templates/0_login-form-main/index.html
+++ b/0_Javascript/_Projetos_/1_free_login_templates/0_login-form-main/index.html
@@ -53,7 +53,7 @@
 
 								</div>
 								<div class="w-50 text-md-right">
-									<a href="#">Esqueci minha senha</a>
+									<a href="#">Esqueci (em breve)</a>
 								</div>
 							</div>
 						</form>
