--- a/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/StartBootstrap/login.html
+++ b/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/StartBootstrap/login.html
@@ -22,34 +22,34 @@
                         <div class="col-lg-5 teste">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header">
-                                    <h3 class="text-center font-weight-light my-4">Login</h3>
+                                    <h3 class="text-center font-weight-light my-4">Área de Acesso</h3>
                                 </div>
                                 <div class="card-body">
                                     <form>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email"
                                                 placeholder="name@example.com" />
-                                            <label for="inputEmail">Email address</label>
+                                            <label for="inputEmail">Usuário</label>
                                         </div>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputPassword" type="password"
                                                 placeholder="Password" />
-                                            <label for="inputPassword">Password</label>
+                                            <label for="inputPassword">Senha</label>
                                         </div>
                                         <div class="form-check mb-3">
                                             <input class="form-check-input" id="inputRememberPassword" type="checkbox"
                                                 value="" />
-                                            <label class="form-check-label" for="inputRememberPassword">Remember
-                                                Password</label>
+                                            <label class="form-check-label" for="inputRememberPassword">Mostrar
+                                                Senha</label>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <a class="small" href="password.html">Forgot Password?</a>
-                                            <a class="btn btn-primary" href="index.html">Login</a>
+                                            <a class="small" href="password.html">Esqueci a minha senha</a>
+                                            <a class="btn btn-primary" href="index.html">Entrar</a>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                    <div class="small"><a href="register.html">Cadastrar uma conta</a></div>
                                 </div>
                             </div>
                         </div>
@@ -61,11 +61,11 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                        <div class="text-muted">Copyright &copy; hugonbr 2021</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Política de Privacidade</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">Termos &amp; Condições</a>
                         </div>
                     </div>
                 </div>
