--- a/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/StartBootstrap/login.html
+++ b/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/StartBootstrap/login.html
@@ -25,31 +25,34 @@
                                     <h3 class="text-center font-weight-light my-4">Área de Acesso</h3>
                                 </div>
                                 <div class="card-body">
-                                    <form>
+                                    <form action="#" onsubmit="entrar(); return false">
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" type="email"
-                                                placeholder="name@example.com" />
+                                            <input id="login" class="form-control" id="inputEmail" type="text"
+                                                placeholder="name@example.com" required value="admin" />
                                             <label for="inputEmail">Usuário</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputPassword" type="password"
-                                                placeholder="Password" />
+                                            <input id="senha" class="form-control" id="inputPassword" type="password"
+                                                placeholder="Password" required value="123" />
                                             <label for="inputPassword">Senha</label>
                                         </div>
                                         <div class="form-check mb-3">
-                                            <input class="form-check-input" id="inputRememberPassword" type="checkbox"
-                                                value="" />
+                                            <input id="show" class="form-check-input" type="checkbox"
+                                                onclick="mostrar()" value="" />
                                             <label class="form-check-label" for="inputRememberPassword">Mostrar
                                                 Senha</label>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="password.html">Esqueci a minha senha</a>
-                                            <a class="btn btn-primary" href="index.html">Entrar</a>
+                                            <button type="submit" class="btn btn-primary">Entrar</button>
+                                            <!-- <a class="btn btn-primary" href="index.html">Entrar</a> -->
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
                                     <div class="small"><a href="register.html">Cadastrar uma conta</a></div>
+                                    <br>
+                                    <p id="aviso" class="text-center mb-4"></p>
                                 </div>
                             </div>
                         </div>
