--- a/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/login.html
+++ b/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Login - SB Admin</title>
+    <title>Login - Sistema WEB</title>
     <link href="css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
