--- a/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/index.html
+++ b/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/index.html
@@ -41,7 +41,7 @@
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
-                    <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                    <li><a class="dropdown-item" href="pages_login/login.html">Logout</a></li>
                 </ul>
             </li>
         </ul>
@@ -88,9 +88,9 @@
                                 <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne"
                                     data-bs-parent="#sidenavAccordionPages">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="login.html">Login</a>
-                                        <a class="nav-link" href="register.html">Register</a>
-                                        <a class="nav-link" href="password.html">Forgot Password</a>
+                                        <a class="nav-link" href="pages_login/login.html">Login</a>
+                                        <a class="nav-link" href="pages_login/register.html">Register</a>
+                                        <a class="nav-link" href="pages_login/password.html">Forgot Password</a>
                                     </nav>
                                 </div>
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
