--- a/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/pages_login/login.html
+++ b/0_Javascript/_Projetos_/2_free_admin_templates/0_admin_panel_main/pages_login/login.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Login - Sistema WEB</title>
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
 </head>
