--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/login.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/login.html
@@ -50,7 +50,7 @@
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="register.html">Cadastrar uma conta</a></div>
+                                    <div><a href="register.html">Cadastrar uma conta</a></div>
                                     <br>
                                     <p id="aviso" class="text-center mb-4"></p>
                                 </div>
