--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/register.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_login/register.html
@@ -19,7 +19,7 @@
             <main>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-7">
+                        <div class="col-lg-7 teste">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header">
                                     <h3 class="text-center font-weight-light my-4">Create Account</h3>
