--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/401.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/401.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>404 Error - SB Admin</title>
+    <title>401 Error - SB Admin</title>
     <link href="../css//styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
                                 <h1 class="display-1">401</h1>
                                 <p class="lead">Unauthorized</p>
                                 <p>Access to this resource is denied.</p>
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <i class="fas fa-arrow-left me-1"></i>
                                     Return to Dashboard
                                 </a>
@@ -51,7 +51,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
