--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/index.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/index.html
@@ -80,8 +80,8 @@
                         <div class="collapse" id="collapseForms" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#">Form1</a>
-                                <a class="nav-link" href="#">Form2</a>
+                                <a class="nav-link" href="#">Página em Branco</a>
+                                <a class="nav-link" href="#">Formulário Teste</a>
                             </nav>
                         </div>
                         <!-- Fim forms -->
