--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/404.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/pages_http_status/404.html
@@ -21,9 +21,9 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mt-4">
-                                <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
+                                <img class="mb-4 img-error" src="../assets/img/error-404-monochrome.svg" />
                                 <p class="lead">This requested URL was not found on this server.</p>
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <i class="fas fa-arrow-left me-1"></i>
                                     Return to Dashboard
                                 </a>
@@ -50,7 +50,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
