--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/tables.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/tables.html
@@ -80,7 +80,7 @@
                         <div class="collapse" id="collapseForms" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="#">Página em Branco</a>
+                                <a class="nav-link" href="../blank_page.html">Página em Branco</a>
                                 <a class="nav-link" href="#">Formulário Teste</a>
                             </nav>
                         </div>
