--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/blank_page.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/blank_page.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Gráficos Sistema WEB</title>
-    <link href="../css/styles.css" rel="stylesheet" />
+    <title>Sistema WEB</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
 </head>
@@ -16,7 +17,7 @@
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="../index.html">Sistema WEB</a>
+        <a class="navbar-brand ps-3" href="index.html">Sistema WEB</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
@@ -40,7 +41,7 @@
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
-                    <li><a class="dropdown-item" href="../pages_login/login.html">Sair</a></li>
+                    <li><a class="dropdown-item" href="pages_login/login.html">Sair</a></li>
                 </ul>
             </li>
         </ul>
@@ -51,7 +52,7 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Painéis</div>
-                        <a class="nav-link" href="../index.html">
+                        <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Painel Inicial
                         </a>
@@ -79,7 +80,7 @@
                         <div class="collapse" id="collapseForms" aria-labelledby="headingOne"
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="../blank_page.html">Página em Branco</a>
+                                <a class="nav-link" href="blank_page.html">Página em Branco</a>
                                 <a class="nav-link" href="#">Formulário Teste</a>
                             </nav>
                         </div>
@@ -124,11 +125,11 @@
                             </nav>
                         </div>
                         <div class="sb-sidenav-menu-heading">Elementos Adicionais</div>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" href="addons_pages/charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Gráficos
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="addons_pages/tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tabelas
                         </a>
@@ -143,60 +144,22 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Gráficos</h1>
+                    <h1 class="mt-4">Painel Inicial</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a href="../index.html">Painel Inicial</a></li>
-                        <li class="breadcrumb-item active">Gráficos</li>
+                        <li class="breadcrumb-item active">Painel Inicial</li>
                     </ol>
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            Chart.js is a third party plugin that is used to generate the charts in this template. The
-                            charts below have been customized - for further customization options, please visit the
-                            official
-                            <a target="_blank" href="https://www.chartjs.org/docs/latest/">Chart.js documentation</a>
-                            .
-                        </div>
-                    </div>
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <i class="fas fa-chart-area me-1"></i>
-                            Area Chart Example
-                        </div>
-                        <div class="card-body"><canvas id="myAreaChart" width="100%" height="30"></canvas></div>
-                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-bar me-1"></i>
-                                    Bar Chart Example
-                                </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
-                                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-pie me-1"></i>
-                                    Pie Chart Example
-                                </div>
-                                <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
-                                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- escreva o conteúdo aqui -->
+                    <!-- fim do conteúdo aqui -->
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                        <div class="text-muted">Copyright &copy; hugonbr 2021</div>
                         <div>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Política de Privacidade</a>
                             &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                            <a href="#">Termos &amp; Condições</a>
                         </div>
                     </div>
                 </div>
@@ -205,11 +168,12 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="../js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="../assets/demo/chart-area-demo.js"></script>
-    <script src="../assets/demo/chart-bar-demo.js"></script>
-    <script src="../assets/demo/chart-pie-demo.js"></script>
+    <!-- <script src="assets/demo/chart-area-demo.js"></script> -->
+    <!-- <script src="assets/demo/chart-bar-demo.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+    <script src="js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
