--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/blank_page.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/blank_page.html
@@ -149,6 +149,8 @@
                         <li class="breadcrumb-item active">Painel Inicial</li>
                     </ol>
                     <!-- escreva o conteúdo aqui -->
+                    <h2 style="text-align: center;">Olá</h2>
+                    <p style="text-align: center;">Teste</p>
                     <!-- fim do conteúdo aqui -->
                 </div>
             </main>
