--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/charts.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/charts.html
@@ -80,7 +80,7 @@
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="../blank_page.html">Página em Branco</a>
-                                <a class="nav-link" href="#">Formulário Teste</a>
+                                <a class="nav-link" href="../multi_pages/form_page.html">Formulário Teste</a>
                             </nav>
                         </div>
                         <!-- Fim forms -->
